fine tuning model

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,7 @@ Desktop.ini
 
 # Large PDF files (optional - uncomment if you don't want to track PDFs)
 # *.pdf
+
+dataset_txt/*
+dataset_law.txt
+outputs/*
